FIX: text-align left in button

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -9,7 +9,6 @@
   line-height: 12px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  text-align: left;
   text-decoration: none;
   color: $basik-light;
   background-color: $basik-accent;
