--- a/source/sass/blocks/watch-tour.scss
+++ b/source/sass/blocks/watch-tour.scss
@@ -35,6 +35,7 @@
 
   &__link {
     position: relative;
+    text-align: left;
     &::after {
       content: "";
       position: absolute;
